[gd_scene load_steps=6 format=3 uid="uid://clah0tnwu35b8"]

[ext_resource type="Script" path="res://dialog_scene/Dialog.gd" id="1_42uhe"]
[ext_resource type="PackedScene" uid="uid://bbruyt65lcvvv" path="res://dialog_scene/replicas_box.tscn" id="1_n5grt"]
[ext_resource type="Resource" uid="uid://u8w7njkp8npl" path="res://dialog_scene/ink/test.ink.json" id="2_lkfr1"]
[ext_resource type="PackedScene" uid="uid://rqc1ucjcp3qg" path="res://dialog_scene/choices_box.tscn" id="3_ifti7"]
[ext_resource type="Script" path="res://addons/inkgd/ink_player.gd" id="4_pyt6a"]

[node name="Dialog" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_42uhe")
ink_file = ExtResource("2_lkfr1")

[node name="InkPlayer" type="Node" parent="."]
process_mode = 3
script = ExtResource("4_pyt6a")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReplicasBox" parent="." instance=ExtResource("1_n5grt")]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ChoicesBox" parent="." instance=ExtResource("3_ifti7")]
process_mode = 3
offset_left = 20.0
offset_top = -57.0
offset_right = 420.0
offset_bottom = -22.0

[connection signal="option_chosen" from="." to="." method="_on_option_chosen"]
[connection signal="option_chosen" from="ChoicesBox" to="." method="_on_choices_box_option_chosen"]
